sumo/tests/traci/VariableRetrieval/Route/errors/UnsupportedVariable/errors.traci
Error: Answered with error to command 166: Unsupported variable specified
